# T3D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  T3D.sln
3DTriangle/: CMakeLists.txt  main.cpp
T3D/: T3D.vcxproj  T3D.vcxproj.filters  T3DMath.cpp  T3DMath.h
dep/assimp/lib/: assimp-vc140-mt.lib  zlibstaticd.lib
dep/assimp/lib/pkgconfig/: assimp.pc
dep/glog/include/glog/: config.h
dep/glog/lib/: glog.lib
src/: BasicShaders.cpp  BasicShaders.h  Bitmap.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.h  Frustum.cpp  Frustum.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Node.cpp  Node.h  Rasterizer.cpp  Rasterizer.h  Renderer.cpp  Renderer.h  Resource.h  ResourceManager.cpp  ResourceManager.h  Scene.cpp  Scene.h  Shader.h  SoftRenderer.h  T3DCamera.cpp  T3DCamera.h  T3DDevice.cpp  T3DDevice.h  T3DLog.cpp  T3DLog.h  T3DMath.cpp  T3DMath.h  T3DMesh.cpp  T3DMesh.h  (+11 more)
